OS11SPRYKE-1937 abholtermine overflow fix (#2262)

--- a/src/Pyz/Yves/CheckoutPage/Theme/default/components/molecules/checkout-block/checkout-block.scss
+++ b/src/Pyz/Yves/CheckoutPage/Theme/default/components/molecules/checkout-block/checkout-block.scss
@@ -24,6 +24,11 @@
         &--shipment {
             padding-bottom: 0;
             margin-bottom: rem(30);
+
+            @include helper-breakpoint-media-max($md-min) {
+                overflow: hidden;
+            }
+
         }
 
         &--summary {
